--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/OperationPage.xaml
@@ -15,6 +15,10 @@
     </Page.BottomAppBar>
 
     <Grid x:Name="gridRoot">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
     	<VisualStateManager.VisualStateGroups>
     		<VisualStateGroup x:Name="vsgLayerButtons">
     			<VisualStateGroup.Transitions>
@@ -83,7 +87,7 @@
         </Grid>
 
         <!--layer buttons-->
-        <Grid HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,90">
+        <Grid HorizontalAlignment="Right" VerticalAlignment="Bottom" Margin="0,0,20,20">
             <sharedControl:ContentButton x:Name="btnSpriteUp" Tapped="spriteUp_Click" Margin="0,0,0,5" RenderTransformOrigin="0.5,0.5">
             	<sharedControl:ContentButton.RenderTransform>
             		<CompositeTransform TranslateY="-53"/>
@@ -125,7 +129,7 @@
         </Grid>
 
         <!--app bar-->
-        <Grid VerticalAlignment="Bottom" Background="#ffe64d4a">
+        <Grid VerticalAlignment="Bottom" Background="#ffe64d4a" Grid.Row="1">
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="*"/>
                 <ColumnDefinition Width="Auto"/>
