--- a/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
+++ b/MeiTuTieTie/MeiTuTieTie/MeiTuTieTie.WindowsPhone/Pages/HomePage.xaml
@@ -51,7 +51,9 @@
                 <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
             </sharedControl:ContentButton>
             <sharedControl:ContentButton Grid.Row="4" Grid.Column="1" Tapped="boutique_Tapped" Visibility="Visible">
-                <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
+                <Grid Background="LightBlue">
+                    <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" Opacity="0"/>
+                </Grid>
             </sharedControl:ContentButton>
             <sharedControl:ContentButton Grid.Row="4" Grid.Column="3" Tapped="test_Tapped" Visibility="Collapsed">
                 <Image Source="/Assets/Images/HomePageMultiPhoto.png" Stretch="Uniform" />
